--- a/index.html
+++ b/index.html
@@ -4,16 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to CSS file -->
 </head>
 <body>
-    <footer class="bg-[#659f8f] dark:bg-[#313131]">
-        <div class="container px-6 py-12 mx-auto">
-            <div class="flex">
-                <a href="#">
-                    <img class="w-auto h-7" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="CodeSpace Logo">
-                </a>
+    <footer class="footer">
+        <div class="footer-container">
+            <!-- Left Section (Newsletter) -->
+            <div class="footer-newsletter">
+                <h2>Subscribe to our newsletter for updates.</h2>
+                <form class="newsletter-form">
+                    <input type="email" placeholder="Email Address" required>
+                    <button type="submit">Subscribe</button>
+                </form>
             </div>
+
+
+            <!-- Right Section (Links) -->
+            <div class="footer-links">
+                <div class="footer-column">
+                    <h3>Quick Link</h3>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Who We Are</a></li>
+                        <li><a href="#">Our Philosophy</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3>Technologies</h3>
+                    <ul>
+                        <li><a href="#">HTML</a></li>
+                        <li><a href="#">CSS</a></li>
+                        <li><a href="#">JavaScript</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Horizontal Line -->
+        <hr>
+
+
+        <!-- Footer Logo -->
+        <div class="footer-logo">
+            <a href="#">
+                <img src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="CodeSpace Logo">
+            </a>
         </div>
     </footer>
 </body>
 </html>
+
+
+
